# ur-o2as

./: .gitignore  .gitlab-ci.yml  .gitmodules  BUILD-DOCKER-IMAGE.sh  INCL-SUDO-ENV.sh  INCL-USER-ENV.sh  LICENSE  README.md  RUN-DOCKER-CONTAINER.sh  SETUP-GITLAB-RUNNER.sh  o2as.code-workspace
.ssh/: o2as-id_rsa  (+1 more)
catkin_ws/src/o2as_aruco_ros/: CMakeLists.txt  package.xml
catkin_ws/src/o2as_aruco_ros/launch/: check_calibration.launch  find_bins.launch  o2as_aruco_ros.rviz  single.launch
catkin_ws/src/o2as_aruco_ros/src/: BinDescription.cpp  BinDescription.h  Plane.h  o2as_single.cpp
catkin_ws/src/o2as_cad_matching/: CMakeLists.txt  package.xml  readme.md  setup.py
catkin_ws/src/o2as_cad_matching/cfg/: CadMatching.cfg
catkin_ws/src/o2as_cad_matching/launch/: data_collection.launch  data_collection_phoxi.launch  data_collection_realsense.launch  search_demo_camera.launch  search_demo_camera_phoxi.launch  search_demo_camera_realsense.launch  search_demo_file.launch  search_server.launch  test_parts_detection.launch  train_assembly.launch  train_part.launch  train_parts.launch  train_parts_phoxi.launch  train_parts_realsense.launch
catkin_ws/src/o2as_cad_matching/msg/: DetectedObject.msg
catkin_ws/src/o2as_cad_matching/scripts/: check_training_range.py  data_collection.py  o2as_cad_matching_server.py  search_demo_camera.py  search_demo_file.py  test_parts_detection.py
catkin_ws/src/o2as_cad_matching/srv/: SearchObjects.srv  SearchObjects2.srv  SelectCamera.srv  SelectObject.srv  SetMaskImage.srv  SetSearchArea.srv  SetSearchRange.srv
catkin_ws/src/o2as_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/o2as_calibration/launch/: offline_calibration.launch  phoxi_calibration.launch  phoxi_data_collection.launch  realsense_data_collection.launch  realsense_startup.launch  robot_control.launch
catkin_ws/src/o2as_calibration/scripts/: offline_calibration.py  rotation.py  run_handeye_calibration.py  run_realsense_calibration.py  run_realsense_calibration_cad.py
catkin_ws/src/o2as_circle_detection/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/o2as_circle_detection/scripts/: circle_detection_client.py  circle_detection_server.py  combined_gripper_server.py
catkin_ws/src/o2as_circle_detection/srv/: CircleDetectionCommand.srv
catkin_ws/src/o2as_easy_handeye/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/o2as_easy_handeye/cfg/: o2as_easy_handeye.cfg
catkin_ws/src/o2as_easy_handeye/launch/: calibrate.launch  check_calibration.launch  o2as_calibrate.launch  o2as_calibrate_eyeonbase_real.launch  o2as_calibrate_realsense.launch  o2as_publish.launch  o2as_publish_handeye.launch  plane_detector.launch  plane_detector.rviz  realsense.launch
catkin_ws/src/o2as_easy_handeye/scripts/: check_calibration.py  go_home.py  publish.py  run_handeye_calibration.py  run_handeye_calibration_realsense.py  visit_calibration_points.py
catkin_ws/src/o2as_marker_detection/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/o2as_marker_detection/cfg/: MarkerDetection.cfg
catkin_ws/src/o2as_marker_detection/launch/: demo_phoxi.launch  demo_realsense.launch  marker_detection.launch
catkin_ws/src/o2as_marker_detection/scripts/: marker_detection_node.py
catkin_ws/src/o2as_marker_detection/srv/: DetectMarkers.srv
catkin_ws/src/o2as_phoxi_camera/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/o2as_phoxi_camera/cfg/: o2as_phoxi_camera.cfg
catkin_ws/src/o2as_phoxi_camera/config/: 1711015.yaml  2018-03-027-LC3.yaml
catkin_ws/src/o2as_phoxi_camera/image/: .gitignore
catkin_ws/src/o2as_phoxi_camera/launch/: calibration.launch  o2as_phoxi_camera.launch  o2as_phoxi_camera.rviz  o2as_phoxi_camera_test.launch
catkin_ws/src/o2as_phoxi_camera/scripts/: save_depth.py
catkin_ws/src/o2as_phoxi_camera/src/: main.cpp  o2as_phoxi_camera_calibration.py  o2as_phoxi_camera_example.py
catkin_ws/src/o2as_phoxi_camera/srv/: DumpFrame.srv  GetFrame.srv  GetInt.srv
catkin_ws/src/o2as_phoxi_camera/urdf/: PhoXi3DscannerL.urdf  PhoXi3DscannerM.urdf  PhoXi3DscannerS.urdf  PhoXi3DscannerXL.urdf  PhoXi3DscannerXS.urdf  PhoXi3Dscanner_values.xacro
catkin_ws/src/o2as_precision_gripper/: CMakeLists.txt  package.xml
catkin_ws/src/o2as_precision_gripper/config/: combined_gripper_parameters.yaml  nut_tool_parameters.yaml  precision_gripper_parameters.yaml  setScrew_tool_parameters.yaml
catkin_ws/src/o2as_precision_gripper/launch/: nut_tools.launch  precision_gripper.launch  test_combined_gripper.launch  test_precision_gripper.launch
catkin_ws/src/o2as_precision_gripper/scripts/: combined_gripper_server.py  lib_robotis_xm430.py  nut_tool_server.py  precision_gripper_action_client_sample.py  precision_gripper_server.py  setScrew_tool.py
catkin_ws/src/o2as_realsense_camera/: CMakeLists.txt  o2as_realsense_camera_nodelet.xml  package.xml  readme.md  setup.py
catkin_ws/src/o2as_realsense_camera/cfg/: RealSenseCamera.cfg
catkin_ws/src/o2as_realsense_camera/image/: .gitignore
catkin_ws/src/o2as_realsense_camera/launch/: calibration.launch  camera.launch  demo.launch
catkin_ws/src/o2as_realsense_camera/rviz/: pointcloud.rviz
catkin_ws/src/o2as_realsense_camera/scripts/: calibration.py  demo.py
catkin_ws/src/o2as_realsense_camera/src/: RealSenseCamera.cpp  nodelet.cpp
catkin_ws/src/o2as_realsense_camera/srv/: DumpFrame.srv  GetFrame.srv
catkin_ws/src/o2as_vision/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/o2as_vision/image/: .gitignore
catkin_ws/src/o2as_vision/launch/: demo.launch  vision_server.launch
catkin_ws/src/o2as_vision/scripts/: cad_matching_demo.py  o2as_vision_server.py  phoxi_camera_actual_example.py
catkin_ws/src/o2as_vision/src/: o2as_vision_server.cpp  o2as_vision_server.h
catkin_ws/src/o2as_xela_sensor/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/o2as_xela_sensor/action/: Calibrate.action
catkin_ws/src/omron_cad_matching/: CMakeLists.txt  package.xml  readme.md  setup.py
catkin_ws/src/urdf_converter/: CMakeLists.txt  README.md  package.xml
(+560 files in other folders)
