<?xml version="1.0"?>
<package format="2">
  <name>o2as_calibration</name>
  <version>0.0.0</version>
  <description>The o2as_calibration package</description>
  <maintainer email="yoshiya_shibata@omron.co.jp">Yoshiya Shibata</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
