<?xml version="1.0"?>
<package format="2">
  <name>o2as_circle_detection</name>
  <version>0.0.1</version>
  <description>The o2as_circle_detection package</description>

  <maintainer email="niekaidi92@gmail.com">Kaidi Nie</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
