<?xml version="1.0"?>
<package format="2">
  <name>o2as_marker_detection</name>
  <version>0.0.0</version>
  <description>The o2as_marker_detection package</description>
  <maintainer email="shivatti777@gmail.com">YOshiya Shibata</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>geometry_msgs</depend>

  <export>
  </export>
</package>
