<?xml version="1.0"?>
<package format="2">
  <name>o2as_precision_gripper</name>
  <version>0.0.1</version>
  <description>The o2as_precision_gripper package</description>

  <maintainer email="niekaidi92@gmail.com">Kaidi Nie</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>o2as_msgs</build_depend> 
  <exec_depend>o2as_msgs</exec_depend> 


</package>
