<?xml version="1.0"?>
<package format="2">
  <name>o2as_vision</name>
  <version>0.0.0</version>
  <description>The o2as_vision package</description>
  <maintainer email="FvDrigalski@gmail.com">Felix von Drigalski</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>tf</depend>
  <depend>o2as_realsense_camera</depend>
  <depend>o2as_phoxi_camera</depend>
  <depend>o2as_cad_matching</depend>
  
  <export>
  </export>
</package>
