<?xml version="1.0"?>
<package format="2">
	<name>omron_cad_matching</name>
	<version>0.0.0</version>
	<description>the omron_cad_matching</description>
	<author email="yoshiya_shibata@omron.co.jp">Yoshiya Shibata</author>
	<maintainer email="yoshiya_shibata@omron.co.jp">Yoshiya Shibata</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rospy</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>image_transport</depend>
	<depend>libpcl-all-dev</depend>
	<build_depend>message_generation</build_depend>
	<exec_depend>message_runtime</exec_depend>
	<depend>OpenCV</depend>
	<depend>OpenMP</depend>

	<export>
	</export>
</package>
